# test-paddle-c-api

./: CMakeLists.txt  README.md  convert_mkldnn_protobin.sh  convert_protobin_alexnet.sh  imagenet.mean  main.cpp  trainer_config_alexnet.py
